TEST_PROGRAMS/typing_benchmarks/invalid/funcall1.go
package main

func f(x int) {
}

func main() {
	// Argument is not an int
	f(3.14)
}
